--- a/sistema_metodos_agiles/requirements.txt
+++ b/sistema_metodos_agiles/requirements.txt
@@ -7,7 +7,9 @@ charset-normalizer==2.1.1
 cryptography==37.0.4
 defusedxml==0.7.1
 Django==4.1
+django-environ==0.9.0
 docutils==0.19
+gunicorn==20.1.0
 idna==3.3
 imagesize==1.4.1
 Jinja2==3.1.2
