Se termina el entorno prod

--- a/.env
+++ b/.env
@@ -9,9 +9,10 @@ ENGINE=django.db.backends.postgresql
 DB_NAME=metodologias_agiles
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
-DB_HOST=db
+DB_HOST=postgres
+DB_HOST_PROD=db
 DB_PORT=5432
-APP_PORT=8080
+APP_PORT=8000
 #superuser details
 DJANGO_SU_NAME=test
 DJANGO_SU_EMAIL=admin12@admin.com
