--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services: # the different images that will be running as containers
     ports: 
       - 1339:80 
     volumes:  
-      - static_volume:/home/app/microservice/static 
+      - static_volume:/home/app/webapp/loginApp/static
     depends_on: 
       - web 
     restart: "on-failure" 
@@ -14,23 +14,24 @@ services: # the different images that will be running as containers
     build: . 
     command: sh -c "python manage.py makemigrations &&
                     python manage.py migrate &&
-                    gunicorn microservice_sample_app.wsgi:application --bind 0.0.0.0:${APP_PORT}" 
+                    gunicorn sistema_metodos_agiles.wsgi:application --bind 0.0.0.0:${APP_PORT}" 
     volumes: 
       - ./sistema_metodos_agiles:/microservice 
-      - static_volume:/home/app/microservice/static
+      - static_volume:/home/app/webapp/loginApp/static
     env_file: 
       - .env # name of the env file
     image: microservice_app 
     expose: 
       - ${APP_PORT} # retrieved from the .env file
     restart: "on-failure"
+    container_name: sistemas_metodos_agiles
     depends_on: 
       - db
   db: # service name
     image: postgres:14-alpine 
     container_name: postgres
     volumes:
-      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
+      - ./database/init.sql:/docker-entrypoint-initdb.d/init.sql
       - postgres_data:/var/lib/postgresql/data/
 # access credentials from the .env file
     environment: 
@@ -38,6 +39,8 @@ services: # the different images that will be running as containers
       - POSTGRES_DB=${DB_NAME}
       - PGPORT=${DB_PORT}
       - POSTGRES_USER=${POSTGRES_USER}
+    ports:
+      - 5433:5432
     restart: "on-failure"
 volumes:
   postgres_data:
