--- a/sistema_metodos_agiles/requirements.txt
+++ b/sistema_metodos_agiles/requirements.txt
@@ -39,4 +39,5 @@ sphinxcontrib-jsmath==1.0.1
 sphinxcontrib-qthelp==1.0.3
 sphinxcontrib-serializinghtml==1.1.5
 sqlparse==0.4.2
+Unipath==1.1
 urllib3==1.26.11
