--- a/sistema_metodos_agiles/requirements.txt
+++ b/sistema_metodos_agiles/requirements.txt
@@ -18,6 +18,7 @@ oauthlib==3.2.0
 packaging==21.3
 protobuf==4.21.5
 psycopg2==2.9.3
+psycopg2-binary==2.9.3
 pycparser==2.21
 Pygments==2.13.0
 PyJWT==2.4.0
