--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,11 +10,10 @@ services: # the different images that will be running as containers
     depends_on: 
       - web 
     restart: "on-failure" 
-  web: # service name
+  web: # service name python initSQL2.py &&
     build: . 
     command: sh -c "python manage.py makemigrations &&
                     python manage.py migrate && 
-                    python initSQL.py &&
                     gunicorn sistema_metodos_agiles.wsgi:application --bind 0.0.0.0:${APP_PORT}"
     volumes: 
       - ./sistema_metodos_agiles:/microservice 
