--- a/requirements.txt
+++ b/requirements.txt
@@ -1,37 +1,54 @@
 alabaster==0.7.12
+arabic-reshaper==2.1.4
 asgiref==3.5.2
+asn1crypto==1.5.1
 attrs==22.1.0
 Babel==2.10.3
 certifi==2022.6.15
 cffi==1.15.1
 charset-normalizer==2.1.1
+click==8.1.3
 cryptography==37.0.4
+cssselect2==0.7.0
 defusedxml==0.7.1
 Django==4.1
 django-environ==0.9.0
 docutils==0.19
+future==0.18.2
 gunicorn==20.1.0
+html5lib==1.1
 idna==3.3
 imagesize==1.4.1
 iniconfig==1.1.1
 Jinja2==3.1.2
+lxml==4.9.1
 MarkupSafe==2.1.1
 numpy==1.23.4
 oauthlib==3.2.0
+oscrypto==1.3.0
 packaging==21.3
+Pillow==9.3.0
 pluggy==1.0.0
 protobuf==4.21.5
 psycopg2==2.9.3
 py==1.11.0
 pycparser==2.21
 Pygments==2.13.0
+pyHanko==0.15.1
+pyhanko-certvalidator==0.19.6
 PyJWT==2.4.0
 pyparsing==3.0.9
+PyPDF3==1.0.6
 pytest==7.1.3
+python-bidi==0.4.2
 python-dateutil==2.8.2
 python3-openid==3.2.0
 pytz==2022.2.1
+pytz-deprecation-shim==0.1.0.post0
 pywatchman==1.4.1
+PyYAML==6.0
+qrcode==7.3.1
+reportlab==3.6.12
 requests==2.28.1
 requests-oauthlib==1.3.1
 six==1.16.0
@@ -46,6 +63,14 @@ sphinxcontrib-jsmath==1.0.1
 sphinxcontrib-qthelp==1.0.3
 sphinxcontrib-serializinghtml==1.1.5
 sqlparse==0.4.2
+svglib==1.4.1
+tinycss2==1.2.1
 tomli==2.0.1
+tqdm==4.64.1
+tzdata==2022.6
+tzlocal==4.2
 Unipath==1.1
+uritools==4.0.0
 urllib3==1.26.11
+webencodings==0.5.1
+xhtml2pdf==0.2.8
